# prism-npu

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt  setup.py
arch/: ascend310p_specs.md  ascend_310p.yaml  ascend_310p_timeloop.yaml  ascend_910b4.yaml  ascend_910b4_2xbw.yaml  ascend_910b4_for_mapping.yaml  ascend_910b4_for_sweep_v2.yaml  ascend_vector.md
benchmark/: README.md  convert_new_models_om.sh  convert_onnx_to_om.sh  convert_qwen3_prefill_om.sh  export_bert_gpt2_qwen.py  export_llama_3_2_1b_prefill_sdpa.py  export_models_onnx.py  export_modernbert.py  export_modernbert_sdpa.py  export_net_transformer.py  export_phi3_mini_prefill_sdpa.py  export_qwen2_5_05b_prefill_sdpa.py  export_qwen3_decode.py  export_qwen3_prefill.py  export_qwen3_prefill_sdpa.py  export_smollm2_360m_prefill_sdpa.py  export_smollm2_decode.py  parse_msprof.py  parse_timeloop_stats.py  run_etbert_int8_msprof.sh  run_etbert_llc_ddr_msprof.sh  run_inference_ascend.py  run_issue9_high_batch.sh  run_new_models_msprof.sh  run_phase_b.sh  run_pipeutil_supplement.sh  run_pipeutil_wave1.sh  run_qwen3_msprof_full.sh  run_qwen3_sdpa_batch.sh  run_sdpa_atc_msprof.sh  run_wave2.sh  run_wave2_msprof.sh
data/: experiment_variables.json
mapper/: timeloop_constraints_310p.yaml  timeloop_constraints_910b4.yaml  timeloop_mapper.yaml
models/: NetTrans_structure_template.md  bert_base.yaml  dara_dqn.yaml  hf_bert.yaml  net_transformer.yaml  qwen3_0.6b.yaml
scripts/: calib_fixpipe_mte3_bw.py  check_v8_compat.py  eval_issue9_v8.py  fit_aiv_regression.py  ingest_issue9_msprof.py  parse_pipeutil_to_baseline.py  prism_ceiling.py  prism_extract.py  prism_fit.py  prism_mapping.py  prism_predict_pipe.py  (+6 more)
(+162 files in other folders)
